--- a/openy_node_camp/openy_node_camp.info.yml
+++ b/openy_node_camp/openy_node_camp.info.yml
@@ -25,6 +25,7 @@ dependencies:
   - openy_prgf_camp_menu
   - openy_prgf_fc
   - openy_prgf_header
+  - openy_prgf_panorama
   - openy_prgf_simple_content
   - openy_prgf_small_banner
   - paragraphs
