[YGH-403] Add descriptions to panorama paragraph

--- a/openy_prgf_panorama/config/install/field.field.block_content.panorama_block.body.yml
+++ b/openy_prgf_panorama/config/install/field.field.block_content.panorama_block.body.yml
@@ -11,7 +11,7 @@ field_name: body
 entity_type: block_content
 bundle: panorama_block
 label: Body
-description: ''
+description: 'Text which could be displayed at a top of rendered panorama.'
 required: false
 translatable: true
 default_value: {  }
