--- a/docroot/sites/default/config/staging/ymca_retention.bonus_codes_settings.yml
+++ b/docroot/sites/default/config/staging/ymca_retention.bonus_codes_settings.yml
@@ -1,43 +1,61 @@
 bonus_codes:
   -
     code: code01
-    reference: '5486'
+    reference: '5526'
+    video: ''
   -
     code: code02
-    reference: '5486'
+    reference: '310'
+    video: ''
   -
     code: code03
-    reference: '5486'
+    reference: '314'
+    video: ''
   -
     code: code04
-    reference: '5486'
+    reference: '5536'
+    video: ''
   -
     code: code05
-    reference: '5486'
+    reference: '5531'
+    video: ''
   -
     code: code06
     reference: '5486'
+    video: '<iframe width="716" height="400" src="https://www.youtube.com/embed/CIbFPk004Fk" frameborder="0" allowfullscreen></iframe>'
   -
     code: code07
-    reference: '5486'
+    reference: '5531'
+    video: ''
   -
     code: code08
-    reference: '5486'
+    reference: '5531'
+    video: ''
   -
     code: code09
     reference: '5486'
+    video: ''
   -
     code: code10
-    reference: '5486'
+    reference: '5536'
+    video: ''
   -
     code: code11
     reference: '5486'
+    video: ''
   -
     code: code12
     reference: '5486'
+    video: ''
   -
     code: code13
     reference: '5486'
+    video: ''
   -
     code: code14
     reference: '5486'
+    video: ''
+  -
+    code: ''
+    reference: null
+    video: ''
