Fix tour config fatal error

--- a/themes/openy_themes/openy_rose/config/optional/tour.tour.openy-theme-overview.yml
+++ b/themes/openy_themes/openy_rose/config/optional/tour.tour.openy-theme-overview.yml
@@ -1,6 +1,8 @@
 langcode: en
 status: true
-dependencies: {  }
+dependencies:
+  module:
+    - tour
 id: openy-theme-overview
 label: 'Theme Overview'
 theme: openy_rose
