--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
         "behat/behat": "^3.0",
         "behat/mink": "~1.7",
         "behat/mink-goutte-driver": "~1.2",
-        "emuse/behat-html-formatter": "^0.1.0"
+        "emuse/behat-html-formatter": "^0.1.0",
+        "drupal/tqextension": "dev-drupal-8",
+        "cevou/behat-screenshot-compare-extension": "^1.0@dev"
     },
     "config": {
         "bin-dir": "bin/"
