Fix theme tour dependencies

--- a/themes/openy_themes/openy_rose/config/optional/tour.tour.openy-theme-overview.yml
+++ b/themes/openy_themes/openy_rose/config/optional/tour.tour.openy-theme-overview.yml
@@ -2,10 +2,10 @@ langcode: en
 status: true
 dependencies:
   module:
-    - tour
+    - openy_node
 id: openy-theme-overview
 label: 'Theme Overview'
-theme: openy_rose
+module: openy_node
 routes:
   - route_name: system.theme_settings_theme
     route_params:
