[YMCA-1536] Administer Retention Campaign permission

--- a/docroot/modules/custom/ymca_retention/ymca_retention.routing.yml
+++ b/docroot/modules/custom/ymca_retention/ymca_retention.routing.yml
@@ -52,7 +52,7 @@ ymca_retention.ymca_retention_member.delete_all:
     _form: '\Drupal\ymca_retention\Form\DeleteAllMembersForm'
     _title: 'YMCA Retention Delete All Members'
   requirements:
-    _permission: 'administer site configuration'
+    _permission: 'administer retention campaign'
 
 ymca_retention.settings:
   path: '/admin/config/system/ymca-retention'
@@ -60,7 +60,7 @@ ymca_retention.settings:
     _form: '\Drupal\ymca_retention\Form\SettingsForm'
     _title: 'YMCA Retention Settings'
   requirements:
-    _permission: 'administer site configuration'
+    _permission: 'administer retention campaign'
 
 ymca_retention.settings_branches:
   path: '/admin/config/system/ymca-retention/branches'
@@ -68,7 +68,7 @@ ymca_retention.settings_branches:
     _form: '\Drupal\ymca_retention\Form\SettingsBranchesForm'
     _title: 'YMCA Retention Branches'
   requirements:
-    _permission: 'administer site configuration'
+    _permission: 'administer retention campaign'
 
 ymca_retention.settings_cron:
   path: '/admin/config/system/ymca-retention/cron'
@@ -76,7 +76,7 @@ ymca_retention.settings_cron:
     _form: '\Drupal\ymca_retention\Form\SettingsCronForm'
     _title: 'YMCA Retention Cron'
   requirements:
-    _permission: 'administer site configuration'
+    _permission: 'administer retention campaign'
 
 ymca_retention.settings_instant_win:
   path: '/admin/config/system/ymca-retention/instant-win'
@@ -84,7 +84,7 @@ ymca_retention.settings_instant_win:
     _form: '\Drupal\ymca_retention\Form\SettingsInstantWinForm'
     _title: 'YMCA Retention Instant Win'
   requirements:
-    _permission: 'administer site configuration'
+    _permission: 'administer retention campaign'
 
 ymca_retention.settings_bonus_codes:
   path: '/admin/config/system/ymca-retention/bonus-codes'
@@ -92,7 +92,7 @@ ymca_retention.settings_bonus_codes:
     _form: '\Drupal\ymca_retention\Form\SettingsBonusCodesForm'
     _title: 'YMCA Retention Bonus Codes'
   requirements:
-    _permission: 'administer site configuration'
+    _permission: 'administer retention campaign'
 
 ymca_retention.settings_generate_content:
   path: '/admin/config/system/ymca-retention/generate-content'
@@ -100,7 +100,7 @@ ymca_retention.settings_generate_content:
     _form: '\Drupal\ymca_retention\Form\GenerateContentForm'
     _title: 'YMCA Retention Generate content'
   requirements:
-    _permission: 'administer site configuration'
+    _permission: 'administer retention campaign'
 
 ymca_retention.settings_calculate_goals:
   path: '/admin/config/system/ymca-retention/calculate-goals'
@@ -108,7 +108,7 @@ ymca_retention.settings_calculate_goals:
     _form: '\Drupal\ymca_retention\Form\CalculateGoalsForm'
     _title: 'YMCA Retention Calculate goals'
   requirements:
-    _permission: 'administer site configuration'
+    _permission: 'administer retention campaign'
 
 ymca_retention.leaderboard_json:
   path: '/ymca-retention/leaderboard/{branch_id}'
@@ -205,7 +205,7 @@ ymca_retention.settings_fix_members:
     _form: '\Drupal\ymca_retention\Form\FixMembersForm'
     _title: 'YMCA Retention Fix Members'
   requirements:
-    _permission: 'administer site configuration'
+    _permission: 'administer retention campaign'
 
 # TODO Hide menu item for now, as not used.
 #ymca_retention.ymca_winners.draw_winners:
@@ -214,5 +214,5 @@ ymca_retention.settings_fix_members:
 #    _controller: '\Drupal\ymca_retention\Controller\WinnersController::drawWinners'
 #    _title: 'Draw winners'
 #  requirements:
-#    _permission: 'administer site configuration'
+#    _permission: 'administer retention campaign'
 #    _csrf_token: 'TRUE'
