--- a/docroot/sites/default/config/staging/views.view.ymca_members.yml
+++ b/docroot/sites/default/config/staging/views.view.ymca_members.yml
@@ -34,7 +34,7 @@ display:
       access:
         type: perm
         options:
-          perm: 'administer site configuration'
+          perm: 'administer retention campaign'
       cache:
         type: none
         options: {  }
