--- a/docroot/sites/default/config/staging/views.view.ymca_retention_member_prizes.yml
+++ b/docroot/sites/default/config/staging/views.view.ymca_retention_member_prizes.yml
@@ -26,7 +26,7 @@ display:
       access:
         type: perm
         options:
-          perm: 'administer site configuration'
+          perm: 'administer retention campaign'
       cache:
         type: tag
         options: {  }
