--- a/field.field.node.branch.field_branch_body.yml
+++ b/field.field.node.branch.field_branch_body.yml
@@ -13,9 +13,9 @@ dependencies:
     - paragraphs.paragraphs_type.featured_stories
     - paragraphs.paragraphs_type.gallery
     - paragraphs.paragraphs_type.latest_news_and_updates
-    - paragraphs.paragraphs_type.panorama
     - paragraphs.paragraphs_type.simple_content
     - paragraphs.paragraphs_type.small_banner
+    - paragraphs.paragraphs_type.whay
   module:
     - entity_reference_revisions
 id: node.branch.field_branch_body
@@ -41,9 +41,9 @@ settings:
       simple_content: simple_content
       blackbaud: blackbaud
       1c: 1c
+      whay: whay
       all_amenities: all_amenities
       small_banner: small_banner
-      panorama: panorama
     target_bundles_drag_drop:
       2c:
         enabled: true
@@ -94,23 +94,23 @@ settings:
         weight: -20
         enabled: false
       whay:
+        enabled: true
         weight: -19
-        enabled: false
       all_amenities:
         enabled: true
         weight: 23
       all_testimonials:
         weight: 29
         enabled: false
-      camp_menu:
+      branch_top_info:
         weight: 31
+        enabled: false
+      camp_menu:
+        weight: 32
         enabled: false
       small_banner:
         enabled: true
         weight: 37
-      panorama:
-        enabled: true
-        weight: 41
       prgf_location_finder_filters:
         weight: 42
         enabled: false
