--- a/openy_node_branch/openy_node_branch.info.yml
+++ b/openy_node_branch/openy_node_branch.info.yml
@@ -32,6 +32,7 @@ dependencies:
   - openy_prgf_panorama
   - openy_prgf_simple_content
   - openy_prgf_small_banner
+  - openy_prgf_whay
   - openy_svg_formatter
   - paragraphs
   - path
