--- a/openy_node_branch/config/install/field.field.node.branch.field_branch_body.yml
+++ b/openy_node_branch/config/install/field.field.node.branch.field_branch_body.yml
@@ -44,6 +44,7 @@ settings:
       whay: whay
       all_amenities: all_amenities
       small_banner: small_banner
+      panorama: panorama
     target_bundles_drag_drop:
       2c:
         enabled: true
