[YGH-84] Update display setting of branch ct

--- a/config/install/field.field.node.branch.field_branch_body.yml
+++ b/config/install/field.field.node.branch.field_branch_body.yml
@@ -13,6 +13,7 @@ dependencies:
     - paragraphs.paragraphs_type.featured_stories
     - paragraphs.paragraphs_type.gallery
     - paragraphs.paragraphs_type.latest_news_and_updates
+    - paragraphs.paragraphs_type.panorama
     - paragraphs.paragraphs_type.simple_content
     - paragraphs.paragraphs_type.small_banner
     - paragraphs.paragraphs_type.whay
