[YMCA-XXX] Fix stage_file_proxy on demo.

--- a/docroot/devops/reinstall/vars/environments/demo_env.yml
+++ b/docroot/devops/reinstall/vars/environments/demo_env.yml
@@ -41,4 +41,4 @@ env:
     - { name: 'config-set', status: true, arguments: "ymca_mindbody.settings is_production 1" }
   post_settings:
     - { name: '$settings["cache"]["bins"]["render"]', status: false, value: 'cache.backend.memory' }
-    - { name: '$config["stage_file_proxy.settings"]["origin"]', status: false, value: '{{ origin_site_url }}' }
+    - { name: '$config["stage_file_proxy.settings"]["origin"]', status: true, value: '{{ origin_site_url }}' }
