Add user and main menu blocks to sidebar region

--- a/modules/openy_features/openy_menu/modules/openy_menu_main/openy_menu_main.info.yml
+++ b/modules/openy_features/openy_menu/modules/openy_menu_main/openy_menu_main.info.yml
@@ -3,5 +3,9 @@ description: 'Openy Menu Main'
 type: module
 core: 8.x
 dependencies:
+  - block
+  - node
   - system
+  - user
+  - views
 version: 8.x-1.0
