[YMCA-1474] Header and footer routings for 3rd party services

--- a/docroot/modules/custom/openy_hf/openy_hf.libraries.yml
+++ b/docroot/modules/custom/openy_hf/openy_hf.libraries.yml
@@ -11,3 +11,8 @@ openy_hf_generic:
     - core/drupalSettings
     - core/jquery.once
     - core/jquery.cookie
+openy_hf_header_footer:
+  version: 1.x
+  css:
+    theme:
+      'css/openy_hf.css': {}
