[OYPD-338] Grant editor access to tours, taxonomy, and menus.

--- a/modules/openy_features/openy_user/config/install/user.role.editor.yml
+++ b/modules/openy_features/openy_user/config/install/user.role.editor.yml
@@ -132,3 +132,16 @@ permissions:
   147: 'create blog content'
   148: 'edit own blog content'
   149: 'view blog revisions'
+  150: 'administer taxonomy'
+  151: 'delete terms in area'
+  152: 'edit terms in area'
+  153: 'delete terms in blog_category'
+  154: 'edit terms in blog_category'
+  155: 'delete terms in color'
+  156: 'edit terms in color'
+  157: 'delete terms in facility_type'
+  158: 'edit terms in facility_type'
+  159: 'delete terms in media_tags'
+  160: 'edit terms in media_tags'
+  161: 'administer menu'
+  162: 'access tour'
