--- a/themes/openy_themes/openy_rose/openy_rose.info.yml
+++ b/themes/openy_themes/openy_rose/openy_rose.info.yml
@@ -11,7 +11,7 @@ regions:
   logo: Logo
   primary_menu: Primary Menu
   secondary_menu: Secondary Menu
-  sidebar: Sidebar
+  mobile_menu: Mobile menu
   search: Search Form
   content: Content
   pre_footer: Pre Footer
