--- a/docroot/sites/default/config/staging/openy_hf.settings.yml
+++ b/docroot/sites/default/config/staging/openy_hf.settings.yml
@@ -5,6 +5,22 @@ header_replacements:
   -
     block_id: 'Disable header'
     selector: .nav-global
+  -
+    block_id: 'Disable Toolbar'
+    selector: '.independent-header #toolbar-bar'
+  -
+    block_id: 'Disable Mobile Section  sign in'
+    selector: '.independent-header .sidebar > .col-xs-12'
+  -
+    block_id: 'Disable Mobile Section  search'
+    selector: '.independent-header .sidebar > form'
+  -
+    block_id: 'Disable sign in'
+    selector: '.independent-header #block-top-menu-2 .nav li:nth-child(3)'
+  -
+    block_id: 'Disable search'
+    selector: '.independent-header #block-top-menu-2 .nav li:nth-child(5)'
+
 footer_replacements:
   -
     block_id: 'Disable Footer'
