--- a/docroot/sites/default/config/staging/openy_hf.settings.yml
+++ b/docroot/sites/default/config/staging/openy_hf.settings.yml
@@ -5,6 +5,11 @@ header_replacements:
   -
     block_id: 'Disable header'
     selector: .nav-global
+footer_replacements:
+  -
+    block_id: 'Disable Footer'
+    selector: '#page-footer'
+header_footer_independent_replacements:
   -
     block_id: 'Disable Toolbar'
     selector: '.independent-header #toolbar-bar'
@@ -20,10 +25,5 @@ header_replacements:
   -
     block_id: 'Disable search'
     selector: '.independent-header #block-top-menu-2 .nav li:nth-child(5)'
-
-footer_replacements:
-  -
-    block_id: 'Disable Footer'
-    selector: '#page-footer'
 _core:
   default_config_hash: YQujmiHzDkcPOFQcexA9cT0yY9p2UdYh3RKZDIS672g
