--- a/docroot/sites/default/config/staging/user.role.editor.yml
+++ b/docroot/sites/default/config/staging/user.role.editor.yml
@@ -31,3 +31,5 @@ permissions:
   - 'access browse_files entity browser pages'
   - 'access browse_files_modal entity browser pages'
   - 'dropzone upload files'
+  - 'administer retention campaign'
+  - 'bypass file access'
