--- a/openy_prgf_fin/config/install/core.entity_view_display.paragraph.financial_aid.default.yml
+++ b/openy_prgf_fin/config/install/core.entity_view_display.paragraph.financial_aid.default.yml
@@ -2,25 +2,27 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.field.paragraph.financial_aid.field_prgf_financial_aid
+    - field.field.paragraph.financial_aid.field_fin_webform
     - field.field.paragraph.financial_aid.field_prgf_title
     - paragraphs.paragraphs_type.financial_aid
   module:
-    - content_moderation
+    - webform
 id: paragraph.financial_aid.default
 targetEntityType: paragraph
 bundle: financial_aid
 mode: default
 content:
-  field_prgf_title:
-    weight: 6
-    settings:
-      size: 60
-      placeholder: ''
+  field_fin_webform:
+    weight: 2
+    label: hidden
+    settings: {  }
     third_party_settings: {  }
-    type: string_textfield
-hidden:
-  created: true
-  field_prgf_financial_aid: true
-  status: true
-  uid: true
+    type: webform_entity_reference_entity_view
+  field_prgf_title:
+    weight: 0
+    label: hidden
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+hidden: {  }
