--- a/openy_prgf_fin/config/install/field.storage.paragraph.field_fin_webform.yml
+++ b/openy_prgf_fin/config/install/field.storage.paragraph.field_fin_webform.yml
@@ -4,8 +4,8 @@ dependencies:
   module:
     - paragraphs
     - webform
-id: paragraph.field_prgf_financial_aid
-field_name: field_prgf_financial_aid
+id: paragraph.field_fin_webform
+field_name: field_fin_webform
 entity_type: paragraph
 type: webform
 settings:
