[YGH-407] fix typo

--- a/openy_prgf_fin/config/install/field.field.paragraph.financial_aid.field_prgf_title.yml
+++ b/openy_prgf_fin/config/install/field.field.paragraph.financial_aid.field_prgf_title.yml
@@ -14,7 +14,7 @@ required: false
 translatable: true
 default_value:
   -
-    value: 'Financial Assistance Apllication'
+    value: 'Financial Assistance Application'
 default_value_callback: ''
 settings: {  }
 field_type: string
