[YGH-407] set translatable option for field_fin_webform  field to true

--- a/openy_prgf_fin/config/install/field.field.paragraph.financial_aid.field_fin_webform.yml
+++ b/openy_prgf_fin/config/install/field.field.paragraph.financial_aid.field_fin_webform.yml
@@ -14,7 +14,7 @@ bundle: financial_aid
 label: 'Financial Aid'
 description: 'Financial Aid webform reference.'
 required: false
-translatable: false
+translatable: true
 default_value:
   -
     default_data: ''
