--- a/modules/openy_features/openy_taxonomy/modules/openy_txnm_blog_category/config/install/field.field.taxonomy_term.blog_category.field_taxonomy_content.yml
+++ b/modules/openy_features/openy_taxonomy/modules/openy_txnm_blog_category/config/install/field.field.taxonomy_term.blog_category.field_taxonomy_content.yml
@@ -13,7 +13,7 @@ bundle: blog_category
 label: 'Taxonomy Content'
 description: ''
 required: false
-translatable: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings:
