--- a/modules/openy_features/openy_taxonomy/modules/openy_txnm_blog_category/config/install/field.field.taxonomy_term.blog_category.field_taxonomy_content.yml
+++ b/modules/openy_features/openy_taxonomy/modules/openy_txnm_blog_category/config/install/field.field.taxonomy_term.blog_category.field_taxonomy_content.yml
@@ -11,7 +11,7 @@ field_name: field_taxonomy_content
 entity_type: taxonomy_term
 bundle: blog_category
 label: 'Taxonomy Content'
-description: ''
+description: 'This paragraph will appear in the header of each taxonomy term page of the current vocabulary.'
 required: false
 translatable: true
 default_value: {  }
