--- a/openy_node_branch.info.yml
+++ b/openy_node_branch.info.yml
@@ -28,6 +28,7 @@ dependencies:
   - openy_prgf_amenities
   - openy_prgf_blackbaud
   - openy_prgf_fc
+  - openy_prgf_fin
   - openy_prgf_header
   - openy_prgf_panorama
   - openy_prgf_simple_content
@@ -42,4 +43,4 @@ dependencies:
   - text
   - user
   - views
-version: 8.x-1.0
+version: 8.x-1.3
