--- a/field.field.node.branch.field_branch_body.yml
+++ b/field.field.node.branch.field_branch_body.yml
@@ -11,6 +11,7 @@ dependencies:
     - paragraphs.paragraphs_type.all_amenities
     - paragraphs.paragraphs_type.blackbaud
     - paragraphs.paragraphs_type.featured_stories
+    - paragraphs.paragraphs_type.financial_aid
     - paragraphs.paragraphs_type.gallery
     - paragraphs.paragraphs_type.latest_news_and_updates
     - paragraphs.paragraphs_type.panorama
@@ -44,6 +45,7 @@ settings:
       1c: 1c
       whay: whay
       all_amenities: all_amenities
+      financial_aid: financial_aid
       small_banner: small_banner
       panorama: panorama
     target_bundles_drag_drop:
@@ -110,6 +112,9 @@ settings:
       camp_menu:
         weight: 32
         enabled: false
+      financial_aid:
+        enabled: true
+        weight: 37
       small_banner:
         enabled: true
         weight: 37
