--- a/openy_node_camp/openy_node_camp.info.yml
+++ b/openy_node_camp/openy_node_camp.info.yml
@@ -24,6 +24,7 @@ dependencies:
   - openy_prgf_blackbaud
   - openy_prgf_camp_menu
   - openy_prgf_fc
+  - openy_prgf_fin
   - openy_prgf_header
   - openy_prgf_panorama
   - openy_prgf_simple_content
@@ -32,4 +33,4 @@ dependencies:
   - path
   - telephone
   - user
-version: 8.x-1.0
+version: 8.x-1.2
