--- a/openy_node_event.info.yml
+++ b/openy_node_event.info.yml
@@ -23,6 +23,7 @@ dependencies:
   - openy_prgf_4c
   - openy_prgf_contact_us
   - openy_prgf_event_reg
+  - openy_prgf_fin
   - openy_prgf_header
   - openy_prgf_lto
   - openy_prgf_panorama
@@ -36,4 +37,4 @@ dependencies:
   - user
   - veoa
   - views
-version: 8.x-1.0
+version: 8.x-1.2
