--- a/openy_prgf_loc_finder/config/install/language.content_settings.paragraph.prgf_location_finder.yml
+++ b/openy_prgf_loc_finder/config/install/language.content_settings.paragraph.prgf_location_finder.yml
@@ -2,9 +2,9 @@ langcode: en
 status: true
 dependencies:
   config:
-    - paragraphs.paragraphs_type.location_finder
-id: paragraph.location_finder
+    - paragraphs.paragraphs_type.prgf_location_finder
+id: paragraph.prgf_location_finder
 target_entity_type_id: paragraph
-target_bundle: location_finder
+target_bundle: prgf_location_finder
 default_langcode: site_default
 language_alterable: true
