--- a/composer.json
+++ b/composer.json
@@ -160,6 +160,7 @@
         "drupal/slick_views": "1.0-rc2",
         "drupal/libraries": "3.x-dev",
         "drupal/datalayer": "1.x-dev",
-        "drupal/optimizely": "1.2"
+        "drupal/optimizely": "1.2",
+        "drupal/google_tag": "1.x-dev"
     }
 }
