[YGH-436] Make webform pages non-accessible by anonymous

--- a/openy_prgf_contact_us/config/install/webform.webform.contact_us_for_more_information.yml
+++ b/openy_prgf_contact_us/config/install/webform.webform.contact_us_for_more_information.yml
@@ -13,7 +13,7 @@ elements: "text:\n  '#type': markup\n  '#markup': \"For more than 2 adults on a 
 css: ''
 javascript: ''
 settings:
-  page: true
+  page: false
   page_submit_path: ''
   page_confirm_path: ''
   form_submit_label: ''
