--- a/behat.local.yml
+++ b/behat.local.yml
@@ -10,4 +10,4 @@ default:
       drupal:
         # This assumes that we're running Behat from within
         # DRUPAL_ROOT/profiles/openy.
-        drupal_root: '../../'
+        drupal_root: '../../../'
